Fix overflowing bottom popup menus

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -32,12 +32,12 @@ a {
 }
 
 .btn-shadow:hover {
-  box-shadow: rgba(198, 31, 232, 0.983) 0px 0px 1px 0px inset, rgba(174, 19, 213, 0.923) 0px 5px 10px -2px, rgba(186, 27, 207, 0.924) 0px 30px 60px -30px;
-  border-color: rgba(48, 8, 56, 0.983);
+  /* box-shadow: rgba(255, 255, 255, 0.5) 0px 0px 1px 0px inset, rgba(255, 255, 255, 0.8) 0px 4px 10px -0px, rgba(255, 255, 255, 0.924) 0px 30px 60px -30px; */
+  border-color: rgba(255, 255, 255, .8);
 }
 
 .btn-shadow:hover > * {
-  color: rgba(167, 12, 198, 0.983)
+  color: rgba(255, 255, 255, .8)
 }
 
 /* .no-scroll {
@@ -73,34 +73,4 @@ a {
 
 .bg-awesome {
   background: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.8)), url('/sick_bg.JPG');
-  background-image: ;
 }
-
-
-/* .dropdown {
-  overflow: hidden;
-}
-
-.dropdown.open {
-  overflow: auto;
-  animation: hide-scroll 1.2s backwards;
-}
-
-@keyframes hide-scroll {
-  from, to { overflow: hidden; } 
-} */
-
-/* :focus {
-  outline: 0 !important;
-  box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
-} */
-/* 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
-} */
